--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 <head>
 	<title> Signup </title>
 	<link rel="stylesheet" href= "css/style.css">
+
 </head>
 <body>
   <header>
@@ -28,23 +29,50 @@
   					<div class="container flex justify-center">  
   						<div class="Signup"> 
   						<form>
-  							<label for= "Name">Full Name</label>
-  							<input id="Name" placeholder="Full Name" >
-  							<br>
+  							<label for= "Name">Full Name
+							<input id="Name" type="text" placeholder="Full Name" >
+						    </label>
+						     <br>
 
-  							<label for= "Email">Email Address</label>
-  							<input id="Email" placeholder="Email Address" >
-  							<br>
+  							<label for= "Email">Email Address
+  							 <input id="Email" type="text" placeholder="Email Address" >
+						    </label>
+							<br>
+							<label for= "Phone number"> Phone Number
+								<input id="Phone number" type="number" placeholder="Phone number" >
+							 </label>
+							 <br>
+							 <label for= "Password"> Password
+								<input id="Password" type="password" placeholder="Password" >
+							 </label>
+							 <br>
+							 <label for= "Confirm password"> Confirm password
+								<input id="Confirm password" type="password" placeholder="Confirm password" >
+							 </label>
+							 <br>
+                            <fieldset>
+  							<legend> Select your gender </legend>
+  							<label for="male">
+							 <input id="male" type="radio" name="gender" > male
+							</label>
 
-  							<strong>Select your gender</strong>
-  							<input id="male" type="radio" name="gender" >
-  							<label for="male">male</label>
+  							<label for="female">
+							 <input id="female" type="radio" name="gender" > female
+							</label>
 
-  							<input id="female" type="radio" name="gender" >
-  							<label for="female">female</label>
-
-  							<input id="other" type="radio" name="gender" >
-  							<label for="other">other</label>
+  							<label for="other">
+							  <input id="other" type="radio" name="gender" > other
+							</label>
+							<br>
+							</fieldset>
+                            <br>
+							<fieldset>
+								<legend> Special Insturction </legend>
+								<textarea cols="75" rows="3"></textarea>
+							</fieldset>
+							<br>
+							<input type="reset" value="Reset">
+							<input type="submit" value="Submit">
   						</form>
   						</div>
   					</div>
